update spacewalk nightly entries

--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -592,6 +592,15 @@ gpgkey_id = %(_spacewalk_gpgkey_id)s
 gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/6/%(arch)s/
 
+[spacewalk-nightly-server-centos7]
+name     = Spacewalk Server nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/7/%(arch)s/
+
 [spacewalk-nightly-server-scientific6]
 name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
@@ -610,6 +619,33 @@ gpgkey_id = %(_spacewalk_gpgkey_id)s
 gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/6/%(arch)s/
 
+[spacewalk-nightly-server-oraclelinux7]
+name     = Spacewalk Server nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly/RHEL/7/%(arch)s/
+
+[spacewalk-nightly-server-fedora21]
+name     = Spacewalk Server nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora21-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly/Fedora/21/%(arch)s/
+
+[spacewalk-nightly-server-fedora22]
+name     = Spacewalk Server nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora22-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly/Fedora/22/%(arch)s/
+
 [spacewalk-nightly-client-centos5]
 name     = Spacewalk Client nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
@@ -627,6 +663,15 @@ gpgkey_url = %(_spacewalk_gpgkey_url)s
 gpgkey_id = %(_spacewalk_gpgkey_id)s
 gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/6/%(arch)s/
+
+[spacewalk-nightly-client-centos7]
+name     = Spacewalk Client nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/7/%(arch)s/
 
 [spacewalk-nightly-client-scientific6]
 name     = Spacewalk Client nightly for %(base_channel_name)s
@@ -654,6 +699,33 @@ gpgkey_url = %(_spacewalk_gpgkey_url)s
 gpgkey_id = %(_spacewalk_gpgkey_id)s
 gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/6/%(arch)s/
+
+[spacewalk-nightly-client-oraclelinux7]
+name     = Spacewalk Client nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly-client/RHEL/7/%(arch)s/
+
+[spacewalk-nightly-client-fedora21]
+name     = Spacewalk Client nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora21-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly-client/Fedora/21/%(arch)s/
+
+[spacewalk-nightly-client-fedora22]
+name     = Spacewalk Client nightly for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora22-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/nightly-client/Fedora/22/%(arch)s/
 #---
 
 [opensuse13_1]
