--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -102,6 +102,40 @@ checksum = sha256
 base_channels = fedora21-%(arch)s
 yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=updates-released-debug-f21&arch=%(arch)s
 
+[fedora22]
+archs    = %(_x86_archs)s
+checksum = sha256
+name     = Fedora 22 (%(arch)s)
+gpgkey_url = https://fedoraproject.org/static/8E1431D5.txt
+gpgkey_id = 8E1431D5
+gpgkey_fingerprint = C527 EA07 A934 9B58 9C35 E1BF 11AD C094 8E14 31D5
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=fedora-22&arch=%(arch)s
+dist_map_release = 22
+
+[fedora22-updates]
+label    = %(base_channel)s-updates
+name     = Fedora 22 Updates (%(arch)s)
+archs    = %(_x86_archs)s
+checksum = sha256
+base_channels = fedora22-%(arch)s
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=updates-released-f22&arch=%(arch)s
+
+[fedora22-debug]
+label    = %(base_channel)s-debug
+name    = Fedora 22 Debug (%(arch)s)
+archs    = %(_x86_archs)s
+checksum = sha256
+base_channels = fedora22-%(arch)s
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=fedora-debug-22&arch=%(arch)s
+
+[fedora22-updates-debug]
+label    = %(base_channel)s-updates-debug
+name    = Fedora 22 Updates Debug (%(arch)s)
+archs    = %(_x86_archs)s
+checksum = sha256
+base_channels = fedora22-%(arch)s
+yumrepo_url = https://mirrors.fedoraproject.org/metalink?repo=updates-released-debug-f22&arch=%(arch)s
+
 
 [centos7]
 archs    = %(_x86_archs)s
