adding Spacewalk 2.4 entries

--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -617,6 +617,150 @@ gpgkey_id = %(_spacewalk_gpgkey_id)s
 gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/2.3-client/RHEL/7/%(arch)s/
 
+[spacewalk24-server-centos6]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/RHEL/6/%(arch)s/
+
+[spacewalk24-server-centos7]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/RHEL/7/%(arch)s/
+
+[spacewalk24-server-scientific6]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = scientific6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/RHEL/6/%(arch)s/
+
+[spacewalk24-server-fedora21]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora21-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/Fedora/21/%(arch)s/
+
+[spacewalk24-server-fedora22]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora22-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/Fedora/22/%(arch)s/
+
+[spacewalk24-server-oraclelinux6]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/RHEL/6/%(arch)s/
+
+[spacewalk24-server-oraclelinux7]
+name     = Spacewalk Server 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4/RHEL/7/%(arch)s/
+
+[spacewalk24-client-centos5]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos5-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/5/%(arch)s/
+
+[spacewalk24-client-centos6]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/6/%(arch)s/
+
+[spacewalk24-client-centos7]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = centos7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/7/%(arch)s/
+
+[spacewalk24-client-scientific6]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = scientific6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/6/%(arch)s/
+
+[spacewalk24-client-fedora21]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora21-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/Fedora/21/%(arch)s/
+
+[spacewalk24-client-fedora22]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = fedora22-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/Fedora/22/%(arch)s/
+
+[spacewalk24-client-oraclelinux5]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux5-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/5/%(arch)s/
+
+[spacewalk24-client-oraclelinux6]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux6-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/6/%(arch)s/
+
+[spacewalk24-client-oraclelinux7]
+name     = Spacewalk Client 2.4 for %(base_channel_name)s
+archs    = %(_x86_archs)s
+base_channels = oraclelinux7-%(arch)s
+gpgkey_url = %(_spacewalk_gpgkey_url)s
+gpgkey_id = %(_spacewalk_gpgkey_id)s
+gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
+yumrepo_url = http://yum.spacewalkproject.org/2.4-client/RHEL/7/%(arch)s/
+
 [spacewalk-nightly-server-centos6]
 name     = Spacewalk Server nightly for %(base_channel_name)s
 archs    = %(_x86_archs)s
