--- a/rel-eng/build-missing-builds.conf
+++ b/rel-eng/build-missing-builds.conf
@@ -1,4 +1,4 @@
 TITO_RELEASER=koji
 
-TAGS="spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora21 spacewalk-nightly-fedora22"
+TAGS="spacewalk-2.4-rhel6 spacewalk-2.4-rhel7 spacewalk-2.4-fedora21 spacewalk-2.4-fedora22"
 FEDORA_UPLOAD=0
