build packages for Fedora

--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -3,6 +3,6 @@ releaser = tito.release.KojiGitReleaser
 autobuild_tags = spacewalk-2.4-rhel5 spacewalk-2.4-rhel6 spacewalk-2.4-rhel7 spacewalk-2.4-fedora21 spacewalk-2.4-fedora22
 git_url = git://git@github.com/spacewalkproject/spacewalk.git
 
-#[fedora-git]
-#releaser = tito.release.FedoraGitReleaser
-#branches = master
+[fedora-git]
+releaser = tito.release.FedoraGitReleaser
+branches = master
