moving base_domain and base_port parameters to java

--- a/java/conf/rhn_java.conf
+++ b/java/conf/rhn_java.conf
@@ -92,3 +92,11 @@ java.power_management.types = ipmilan
 
 # how large can config file be to be editable in webUI (in kilobytes)
 java.config_file_edit_size = 32
+
+# this is the domain and port of the request, in terms of something
+# suitable for a Redirect or a Cookie domain.  it is either the Host:
+# header of the incoming request, a hardcoded config value, or set by
+# the frontend mod_paf proxy via X-Server-Hostname.
+java.base_domain =
+java.base_port =
+ 
