moving actions_display_limit parameter to java

--- a/java/conf/rhn_java.conf
+++ b/java/conf/rhn_java.conf
@@ -99,4 +99,7 @@ java.config_file_edit_size = 32
 # the frontend mod_paf proxy via X-Server-Hostname.
 java.base_domain =
 java.base_port =
- 
+
+# Maximum number of actions displayed on schedule/actions pages
+java.actions_display_limit = 10000
+
