moving chat_enabled parameter to java

--- a/java/conf/rhn_java.conf
+++ b/java/conf/rhn_java.conf
@@ -103,3 +103,6 @@ java.base_port =
 # Maximum number of actions displayed on schedule/actions pages
 java.actions_display_limit = 10000
 
+# allow users to chat with spacewalk members on IRC via the web
+java.chat_enabled = 0
+
