moving smtp_server parameter to java

--- a/java/conf/rhn_java.conf
+++ b/java/conf/rhn_java.conf
@@ -106,3 +106,7 @@ java.actions_display_limit = 10000
 # allow users to chat with spacewalk members on IRC via the web
 java.chat_enabled = 0
 
+# Hostname/IP of an SMTP server for sending notifications and traceback
+# alerts to Satellite users
+java.smtp_server = localhost
+
