--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -1062,7 +1062,7 @@ yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL7/openstack20/%(arch)s/
 
 [oraclelinux7-scl12]
 label     = %(base_channel)s-scl12
-arches    = x86_64
+archs     = x86_64
 name      = Software Collection Library release 1.2 packages for Oracle Linux 7 (%(arch)s)
 base_channels = oraclelinux7-%(arch)s
 yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL7/SoftwareCollections12/%(arch)s/
@@ -1143,7 +1143,7 @@ yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL6/spacewalk22/client/%(ar
 
 [oraclelinux6-scl12]
 label     = %(base_channel)s-scl12
-arches    = x86_64
+archs     = x86_64
 name      = Software Collection Library release 1.2 packages for Oracle Linux 6 (%(arch)s)
 base_channels = oraclelinux6-%(arch)s
 yumrepo_url = http://public-yum.oracle.com/repo/OracleLinux/OL6/SoftwareCollections12/%(arch)s/
