875728 - Clarify useNoSSLForPackages comment to match reality

--- a/client/rhel/rhn-client-tools/etc-conf/up2date.config
+++ b/client/rhel/rhn-client-tools/etc-conf/up2date.config
@@ -29,13 +29,13 @@ networkRetries[comment]=Number of attempts to make at network connections before
 networkRetries=1
 
 disallowConfChanges[comment]=Config options that can not be overwritten by a config update action
-disallowConfChanges=noReboot;sslCACert;useNoSSLForPackages;noSSLServerURL;serverURL;disallowConfChanges;
+disallowConfChanges=noReboot;sslCACert;useNoSSLForPackages;serverURL;disallowConfChanges;
 
 sslCACert[comment]=The CA cert used to verify the ssl server
 sslCACert=/usr/share/rhn/RHN-ORG-TRUSTED-SSL-CERT
 
 # Akamai does not support http protocol, therefore setting this option as side effect disable "Location aware" function
-useNoSSLForPackages[comment]=Use the noSSLServerURL for package, package list, and header fetching (disable Akamai)
+useNoSSLForPackages[comment]=Use HTTP for package, package list, and header fetching (disable Akamai)
 useNoSSLForPackages=0
 
 retrieveOnly[comment]=Retrieve packages only
