fixed string module calls to work in python3

--- a/client/rhel/rhnlib/test/Makefile
+++ b/client/rhel/rhnlib/test/Makefile
@@ -1,4 +1,4 @@
-PY_VERSION	= $(shell python -c "import sys, string; print string.split(sys.version)[0]")
+PY_VERSION	= $(shell python -c "import sys; print sys.version.split()[0]")
 FILES		= $(wildcard *.py)
 
 .PHONY: all test compile 
