add openSUSE Leap 42.1

--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -906,6 +906,50 @@ gpgkey_fingerprint = %(_spacewalk_gpgkey_fingerprint)s
 yumrepo_url = http://yum.spacewalkproject.org/nightly-client/Fedora/22/%(arch)s/
 #---
 
+[opensuse_leap42_1]
+checksum = sha256
+archs    = x86_64
+name     = openSUSE Leap 42.1 (%(arch)s)
+gpgkey_url = http://download.opensuse.org/distribution/leap/42.1/repo/oss/suse/repodata/repomd.xml.key
+gpgkey_id = 3DBDC284
+gpgkey_fingerprint = 22C0 7BA5 3417 8CD0 2EFE  22AA B88B 2FD4 3DBD C284
+yumrepo_url = http://download.opensuse.org/distribution/leap/42.1/repo/oss/suse/
+dist_map_release = 42.1
+
+[opensuse_leap42_1-non-oss]
+label    = %(base_channel)s-non-oss
+name     = openSUSE 42.1 non oss (%(arch)s)
+archs    = x86_64
+checksum = sha256
+base_channels = opensuse_leap42_1-%(arch)s
+yumrepo_url = http://download.opensuse.org/distribution/leap/42.1/repo/non-oss/suse/
+
+[opensuse_leap42_1-updates]
+label    = %(base_channel)s-updates
+name     = openSUSE Leap 42.1 Updates (%(arch)s)
+archs    = x86_64
+checksum = sha256
+base_channels = opensuse_leap42_1-%(arch)s
+yumrepo_url = http://download.opensuse.org/update/leap/42.1/oss/
+
+[opensuse_leap42_1-non-oss-updates]
+label    = %(base_channel)s-non-oss-updates
+name     = openSUSE Leap 42.1 non oss Updates (%(arch)s)
+archs    = x86_64
+checksum = sha256
+base_channels = opensuse_leap42_1-%(arch)s
+yumrepo_url = http://download.opensuse.org/update/leap/42.1/non-oss/
+
+[spacewalk24-client-opensuse_leap_42_1]
+name     = Spacewalk Client 2.4 %(base_channel_name)s
+archs    = x86_64
+base_channels = opensuse_leap42_1-%(arch)s
+checksum = sha256
+gpgkey_url = http://download.opensuse.org/repositories/systemsmanagement:/spacewalk:/2.4/openSUSE_Leap_42.1/repodata/repomd.xml.key
+gpgkey_id = A0E46E11
+gpgkey_fingerprint = 68D3 3874 9967 0AEB D988  2DB3 2ABF A143 A0E4 6E11
+yumrepo_url = http://download.opensuse.org/repositories/systemsmanagement:/spacewalk:/2.4/openSUSE_Leap_42.1/
+
 [opensuse13_2]
 checksum = sha256
 archs    = i586, x86_64
