Added UEK4 channels for Oracle Linux 6 and 7.
Signed-off-by: Avi Miller <avi.miller@oracle.com>

--- a/utils/spacewalk-common-channels.ini
+++ b/utils/spacewalk-common-channels.ini
@@ -1018,6 +1018,13 @@ name     = Addons for Oracle Linux 7 (%(arch)s)
 base_channels = oraclelinux7-%(arch)s
 yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL7/addons/%(arch)s/
 
+[oraclelinux7-uek-r4]
+label    = %(base_channel)s-uek-r4
+archs    = x86_64
+name     = Latest Unbreakable Enterprise Kernel Release 4 for Oracle Linux 7 (%(arch)s)
+base_channels = oraclelinux7-%(arch)s
+yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL7/UEKR4/%(arch)s/
+
 [oraclelinux7-uek-r3]
 label    = %(base_channel)s-uek-r3
 archs    = x86_64
@@ -1098,6 +1105,13 @@ archs    = x86_64
 name     = Latest Unbreakable Enterprise Kernel Release 3 for Oracle Linux 6 (%(arch)s)
 base_channels = oraclelinux6-%(arch)s
 yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL6/UEKR3/latest/%(arch)s/
+
+[oraclelinux6-uek-r4]
+label    = %(base_channel)s-uek-r4
+archs    = x86_64
+name     = Latest Unbreakable Enterprise Kernel Release 4 for Oracle Linux 6 (%(arch)s)
+base_channels = oraclelinux6-%(arch)s
+yumrepo_url = http://yum.oracle.com/repo/OracleLinux/OL6/UEKR4/latest/%(arch)s/
 
 [oraclelinux6-mysql55]
 label    = %(base_channel)s-mysql
