--- a/rel-eng/releasers.conf
+++ b/rel-eng/releasers.conf
@@ -1,6 +1,6 @@
 [koji]
 releaser = tito.release.KojiGitReleaser
-autobuild_tags = spacewalk-nightly-rhel5 spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora21 spacewalk-nightly-fedora22 spacewalk-nightly-fedora23
+autobuild_tags = spacewalk-nightly-rhel5 spacewalk-nightly-rhel6 spacewalk-nightly-rhel7 spacewalk-nightly-fedora22 spacewalk-nightly-fedora23
 git_url = git://git@github.com/spacewalkproject/spacewalk.git
 
 #[fedora-git]
