-y started to be needed

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ notifications:
 sudo: required
 dist: trusty
 before_install:
-- sudo apt-get update
+- sudo apt-get -y update
 - wget https://fedorahosted.org/released/koji/koji-1.9.0.tar.bz2 -O /tmp/koji-1.9.0.tar.bz2
 - tar -xjf /tmp/koji-1.9.0.tar.bz2 -C /tmp
 - wget https://github.com/dgoodwin/tito/archive/tito-0.4.18-1.tar.gz -O /tmp/tito.tar.gz
 install:
-- sudo apt-get install yum yum-utils mock pigz python-rpm python-openssl python-urlgrabber python-decoratortools python-lzma python-setuptools python-krbv
+- sudo apt-get -y install yum yum-utils mock pigz python-rpm python-openssl python-urlgrabber python-decoratortools python-lzma python-setuptools python-krbv
 - sudo make -C /tmp/koji-1.9.0/cli DESTDIR=/ install && export PYTHONPATH=$PYTHONPATH:/tmp/koji-1.9.0/
 - sudo pip install /tmp/tito.tar.gz
 - sudo groupadd mock
