Test for doubling the backslashes when reading conf file, remove unused test data

--- a/java/code/src/com/redhat/rhn/common/conf/test/conf/rhn.conf
+++ b/java/code/src/com/redhat/rhn/common/conf/test/conf/rhn.conf
@@ -2,9 +2,5 @@ to_override=keep
 web.fq_to_override=1
 web.to_override_without_prefix=overridden
 to_override_without_prefix1=overridden
-web.escaped_pound=http://server.com/create/\\#foobar
-web.escaped_pound_with_comment=http://server.com/create/\\#foobar #this part is a comment
-web.escaped_multi=I want this \\# to appear as a \\# sign but not the following: # comment
-web.pound_at_beginning= #what will happen to me
-web.pound_at_end=this_value_#
-web.escaped_pound_at_end=this_value_\\#
+server.satellite.key_with_backslash=we\have\backslashes
+server.satellite.key_with_seeming_comment=#this will NOT be a comment!
