Under high load, the service wrapper may incorrectly interpret the inability to get a response in time from taskomatic and kill it (bsc#962253).

--- a/java/conf/default/rhn_taskomatic_daemon.conf
+++ b/java/conf/default/rhn_taskomatic_daemon.conf
@@ -133,3 +133,7 @@ wrapper.syslog.loglevel=STATUS
 # Title to use when running as a console
 wrapper.console.title=RHN Taskomatic
 
+# Under high load, the service wrapper may incorrectly interpret
+# the inability to get a response in time from taskomatic and kill
+# it
+wrapper.ping.timeout=0
