Revert addition of tomcat as requirement for taskomatic systemd service.
The real requirement is apache who routes the cobbler api.

--- a/java/scripts/taskomatic.service
+++ b/java/scripts/taskomatic.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Taskomatic
-After=local-fs.target cobblerd.service sendmail.service
+After=local-fs.target cobblerd.service sendmail.service httpd.service postgresql.service
+Requires=postgresql.service httpd.service
 
 [Service]
 Type=forking
