Add micro-six python module to write code that runs on Python 2 and 3

--- a/backend/common/Makefile
+++ b/backend/common/Makefile
@@ -28,7 +28,8 @@ SPACEWALK_FILES	=   __init__ \
 	    rhn_mpm \
 	    rhn_pkg \
 	    rhn_rpm \
-	    stringutils
+	    stringutils \
+	    usix
 SCRIPTS = spacewalk-cfg-get
 
 # check if we can build man pages
