--- a/utils/Makefile
+++ b/utils/Makefile
@@ -10,7 +10,7 @@ SCRIPTS = sw-system-snapshot migrate-system-profile spacewalk-api apply_errata \
 	  scr.cgi spacewalk-common-channels delete-old-systems-interactive spacewalk-hostname-rename \
 	  spacewalk-dump-schema spacewalk-clone-by-date spacewalk-sync-setup spacewalk-archive-audits \
 	  spacewalk-manage-channel-lifecycle spacewalk-export spacewalk-export-channels \
-	  spacewalk-final-archive
+	  spacewalk-final-archive taskotop
 CONFIGS = spacewalk-common-channels.ini
 
 DOCBOOK = $(wildcard /usr/bin/docbook2man)
