not only in java directory

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ java/buildconf/tempjars/*
 java/.checkstyle
 java/.classpath
 java/.externalToolBuilders
-java/.idea
 java/.pmd
 java/.project
 java/.settings/*
@@ -35,6 +34,7 @@ search-server/spacewalk-search/dist
 search-server/spacewalk-search/rhn-search.pid
 search-server/spacewalk-search/rhn_search_daemon.log
 *~
+.idea
 .project
 .pydevproject
 .zanata-cache
